# agent

./: .gitignore  AGENTS.md  INSTALL.md  README.md  TODO.md
chatgpt/ts-report-writer/: AGENTS.md  pyproject.toml
chatgpt/ts-report-writer/.agents/autopilot/: guardrails.md  prd.json  progress.md  working.md
chatgpt/ts-report-writer/docs/report-mining/: batch-extraction-tracker-template.md  sequential-extraction-runbook.md  verbatim-report-extraction-template.md
chatgpt/ts-report-writer/extracted/: project-coffee-buy-side-fdd.md  project-dental-report-25july2025-vs.md  project-ed-buy-side-fdd.md
chatgpt/ts-report-writer/extracted/manifests/: processing-order.json  project-coffee-buy-side-fdd.json  project-dental-report-25july2025-vs.json  project-ed-buy-side-fdd.json  tracker.json  tracker.md
chatgpt/ts-report-writer/extracted/verification/project-coffee-buy-side-fdd/: review-notes.md  verification.json
chatgpt/ts-report-writer/extracted/verification/project-dental-report-25july2025-vs/: review-notes.md  verification.json
chatgpt/ts-report-writer/reports/: rename_log_2025-11-05.csv
chatgpt/ts-report-writer/reports/extracted/: example-report-private-equity-lender-project-garrison.md  project-ascend-report.md
chatgpt/ts-report-writer/reports/manifests/: example-report-private-equity-lender-project-garrison.json  processing-order.json  project-ascend-report.json  tracker.json  tracker.md
chatgpt/ts-report-writer/reports/verification/project-ascend-report/: review-notes.md  (+1 more)
chatgpt/ts-report-writer/ts_report_writer/: __init__.py  constants.py  pipeline.py
(+701 files in other folders)
