[project]
name = "ts-report-writer"
version = "0.2.0"
description = "Historical report mining and playbook generation for TS Report Writer"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24",
    "python-pptx>=1.0.2",
    "Pillow>=10.0",
    "rapidfuzz>=3.14",
]

[tool.setuptools]
packages = ["ts_report_writer"]
